* Fix generating an RPM installer.
  Closes: SF bug #2977749
* Added support for the lbzip2 program handling BZIP2 archives.
* Added support for the plzip program handling LZIP archives.
* Prevent overwriting the same file with repack.
* Support extraction of BZIP2 (.bz2) files with the Python bz2 module.
* Support extraction of GZIP (.gz) files with the Python gzip module.


0.15 "Contraband" (released 8.4.2012)

* Print help when unknown options are given.
* Print error when archive files do not exist.
* Added installation instructions in doc/install.txt
* Added support for the pigz program handling GZIP archives.


0.14 "Book of Dragons" (released 30.1.2012)

* Handle CRX (.crx) files as ZIP archives. They have garbage at
  the beginning of the file, but some unzip programs can cope with
  that.
* The xz program supports listing of XZ archives. Adjust the
  configuration accordingly.


0.13 "Megamind" (released 25.1.2011)

* Fix command argument order when extracting cpio archives.
* Added correct cpio MIME type on Debian systems.
* Added support for the clzip and pdlzip programs who are both capable
  of handling LZIP (.lz) archives.
* Added support for the orange program which is capable of extracting
  CAB (.cab) archives.
* Added support for DMS (.dms) files with the xdms program.
* Support ZIP (.zip) file creation with the 7z and 7za programs.
* Improved MIME type detection for compressed TAR archives.
* Fix needed archive programs for several test cases, including
  test_repack and test_mime.


0.12 "Galaxy Quest" (released 20.11.2010)

* Show commands that are run.
* Fix rar extraction unpack directory.
* Fix ZIP mimedb detection on Windows systems.


0.11 "Primer" (released 4.10.2010)

* Added support for the standalone 7za program.


0.10 "Matchpoint" (released 10.4.2010)

* Correct shell quoting of commandline arguments. Now files with
  spaces or other special characters are handled correctly.