@@ -26,6 +26,8 @@ READ_SIZE_BYTES = 1024*1024
 def extract_bzip2 (archive, encoding, cmd, **kwargs):
     """Extract a BZIP2 archive with the bz2 Python module."""
     verbose = kwargs['verbose']
+    outdir = kwargs['outdir']
+    # XXX honor outdir
     if verbose:
         util.log_info('extracting %s...' % archive)
     targetname = util.get_single_outfile(kwargs['outdir'], archive)
