@@ -24,6 +24,8 @@ READ_SIZE_BYTES = 1024*1024
 def extract_gzip (archive, encoding, cmd, **kwargs):
     """Extract a GZIP archive with the gzip Python module."""
     verbose = kwargs['verbose']
+    outdir = kwargs['outdir']
+    # XXX honor outdir
     if verbose:
         util.log_info('extracting %s...' % archive)
     targetname = util.get_single_outfile(kwargs['outdir'], archive)
